# SnakeRL

./: .gitignore  README.md  pyproject.toml  test_env.py
src/: __init__.py  evaluate.py  snake_env.py  snake_game.py  train.py  train_watch.py  train_watch_multi.py  watch.py
tests/: test_snake_env.py  test_snake_game.py
