[project]
name = "snake-rl"
version = "0.1.0"
description = "Reinforcement learning Snake game"
authors = [
    {name = "Sandy"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "gymnasium (>=1.2.0,<2.0.0)",
    "stable-baselines3 (>=2.7.0,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
